# stake-dev-tool

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  V2.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  sdt-release.yml  server-ci.yml  site-ci.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: api.rs  config.rs  diff.rs  error.rs  front.rs  games.rs  hash.rs  login.rs  main.rs  mcp.rs  output.rs  pull.rs  push.rs  revisions.rs  share.rs  stats.rs  whoami.rs  workspaces.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/src/: commands.rs  lib.rs  math_sync.rs  preview.rs  state.rs  teams.rs
crates/desktop/src/cloud/: api.rs  auth.rs  config.rs  documents.rs  http.rs  math.rs  migrate.rs  mod.rs  sidecar.rs  sse.rs  sync.rs  workspaces.rs
crates/desktop/src/github/: api.rs  mod.rs
crates/lgs/: Cargo.toml
crates/lgs-wasm/preview-template/: index.html
crates/lgs-wasm/src/: lib.rs
crates/lgs/src/: config.rs  lib.rs  math_engine.rs  routes.rs  session.rs  tenant.rs  types.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: admin.rs  auth.rs  billing.rs  documents.rs  error.rs  lib.rs  math.rs  shares.rs  workspace.rs
crates/server/: Cargo.toml  README.md
crates/server/migrations/: 0001_init.sql  0002_auth_workspaces.sql  0003_math_revisions.sql  0004_documents.sql  0005_share.sql  0006_billing.sql  0007_custom_domains.sql  0008_admin.sql  0009_stripe.sql  0010_password_resets.sql  0011_seats.sql  0012_cancel_at_period_end.sql  0013_share_feedback.sql
crates/server/src/: blobs.rs  config.rs  db.rs  documents.rs  error.rs  http.rs  lib.rs  mail.rs  main.rs  stats.rs  stats_analysis.rs  storage.rs
crates/server/src/api/: admin.rs  auth.rs  billing.rs  documents.rs  domains.rs  invites.rs  math.rs  mod.rs  shares.rs  tokens.rs  workspaces.rs  ws.rs
crates/server/src/auth/: device.rs  discord.rs  email_verify.rs  extract.rs  github.rs  mod.rs  password_reset.rs  passwords.rs  ratelimit.rs  sessions.rs  tokens.rs
crates/server/src/billing/: mod.rs  plan.rs  polar.rs  stripe.rs  webhook.rs
crates/server/src/lgs_host/: dispatch.rs  materialize.rs  mod.rs
crates/server/src/share/: custom.rs  feedback.rs  feedback_widget.js  mod.rs  pages.rs  resolve.rs  rgs.rs  runtime.rs  slug.rs  statics.rs  tenants.rs
crates/server/tests/: admin.rs  auth_workspaces.rs  billing.rs  content_lifecycle.rs  custom_domains.rs  documents.rs  health.rs  lgs_cors.rs  lgs_host.rs  math_revisions.rs  rate_limit_proxy.rs  share.rs
deploy/: .env.prod.example  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  enable-billing.sh  sdt-deploy
deploy/caddy/: Dockerfile
docs/: architecture.md  getting-started.md
docs/v2/: m3-contract.md  m4-m5-contract.md  m7-contract.md  polar-runbook.md  recon-m3-m6.md
site/: .cta.json  .env.example  Dockerfile  LICENSE  README.md  package.json  vercel.json
site/public/: manifest.json
site/src/: routeTree.gen.ts  styles.css
site/src/components/: Footer.tsx  Header.tsx  LegalPage.tsx  SectionRule.tsx  TestViewFigure.tsx
site/src/lib/: plans.ts  site.ts
site/src/routes/: __root.tsx  api.billing.webhook.ts  checkout.cancelled.tsx  checkout.success.tsx  cli.tsx  cloud.tsx  features.tsx  index.tsx  legal.tsx  open-source.tsx  pricing.tsx  privacy.tsx  refunds.tsx  terms.tsx
site/src/server/: billing.ts
ui/: package.json
ui/src/: app.css
ui/src/lib/: Picker.svelte  api.http.ts  api.tauri.ts  api.ts
ui/src/lib/components/: CloudSignInDialog.svelte  MathSyncOverlay.svelte
ui/src/lib/protocol/: AcceptInviteRequest.ts  AcceptInviteResponse.ts  AdminMe.ts  AdminOverride.ts  AdminOverview.ts  AdminShare.ts  AdminSharesResponse.ts  AdminUserRow.ts  AdminUsersResponse.ts  AdminWorkspace.ts  AdminWorkspacesResponse.ts  BillingInterval.ts  BillingLimits.ts  BillingStatusResponse.ts  BillingUsage.ts  BlobUploaded.ts  ChangedFile.ts  CheckRequest.ts  CheckResponse.ts  CheckoutRequest.ts  CheckoutResponse.ts  ComplianceCheck.ts  ComponentStatus.ts  ConstraintRow.ts  CreateFrontBundleRequest.ts  CreateInviteRequest.ts  CreateRevisionRequest.ts  CreateShareRequest.ts  CreateTokenRequest.ts  CreateWorkspaceRequest.ts  CreatedInvite.ts  CreatedToken.ts  DayCount.ts  DeleteDocumentRequest.ts  DeleteDocumentResponse.ts  DeletionResult.ts  DeviceApproveRequest.ts  DeviceApproveResponse.ts  DeviceCodeResponse.ts  DeviceTokenRequest.ts  (+60 more)
ui/src/lib/testview/: TestView.svelte  context.ts
ui/src/routes/: +page.svelte
ui/src/routes/(desktop)/: +layout.svelte  +page.svelte
ui/src/routes/teams/: +page.svelte
ui/src/routes/test/: +page.svelte
web/: .gitignore  README.md  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: admin.ts  api.ts  billing.ts  clipboard.ts  format.ts  push.ts  session.svelte.ts  toasts.svelte.ts  workspaces.svelte.ts
web/src/lib/components/: Badge.svelte  Breadcrumbs.svelte  Button.svelte  Card.svelte  CopyField.svelte  EmailVerifyBanner.svelte  EmptyState.svelte  FeedbackPanel.svelte  FeedbackSketch.svelte  FrontPushPanel.svelte  FrontUrlDialog.svelte  Input.svelte  MathConstraints.svelte  MathFolderPicker.svelte  MathModePanel.svelte  MathPushPanel.svelte  Nav.svelte  (+12 more)
web/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
(+15 files in other folders)
